fix QuantitySpinner sizing on mobile

--- a/src/styles/components/_QuantitySpinner.scss
+++ b/src/styles/components/_QuantitySpinner.scss
@@ -12,4 +12,9 @@
     height: 1.5rem;
     width: 1.5rem;
   }
+
+  &--initial {
+    height: 2rem;
+    width: 2rem;
+  }
 }
